styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;700&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --color-black: #1a151b;
    --color-white: #f5f0e5;
    --color-gray: #5dadb3;
    /* --color-brand-primary: #242429; */
    --color-brand-primary: #001418;
    --color-brand-secondary: #55ffa7;
    --color-brand-tertiary: #f6f6f6;
    --color-brand-tertiary--muted: #f6f6f60d;
  }

  .light {
    --color-black: #1a151b;
    --color-white: #f5f0e5;
    --color-gray: #5dadb3;
    /* --color-brand-primary: #f0f0ef; */
    --color-brand-primary: #ced3d2;
    --color-brand-secondary: #127c42;
    --color-brand-tertiary: #242429;
    --color-brand-tertiary--muted: #2424290d;
  }

  body {
    @apply bg-brand-primary;
    margin: 0;
    font-family: "Outfit", -apple-system, BlinkMacSystemFont, "Segoe UI",
      "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
      "Helvetica Neue", sans-serif;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  p,
  li {
    @apply transition-colors duration-100;
  }

  h1 {
    @apply text-5xl lg:text-6xl font-bold;
  }
  h2 {
    @apply text-xl font-bold text-brand-secondary uppercase tracking-widest lg:text-xl;
  }

  h3 {
    @apply text-xl font-bold  my-8 text-brand-tertiary font-display;
  }

  h4 {
    @apply text-xl lg:text-2xl;
  }

  p,
  ul,
  ol {
    @apply mt-4;
  }

  p,
  li {
    @apply text-lg leading-relaxed lg:text-xl opacity-90 lg:leading-normal font-light;
  }

  ul {
    @apply pl-5 space-y-4 list-disc;
  }

  li {
    @apply marker:text-brand-secondary;
  }

  a {
    @apply text-brand-secondary;
  }

  .full-bleed {
    @apply -mx-6 sm:mx-0;
  }

  .focus-base {
    @apply outline-none ring-offset-brand-primary group-focus-visible:ring-4 group-focus-visible:ring-offset-4 group-focus-visible:ring-brand-secondary focus-visible:ring-4 focus-visible:ring-offset-4 focus-visible:ring-brand-secondary;
  }

  .highlight {
    @apply underline tracking-wider underline-offset-2  decoration-brand-secondary decoration-2 font-bold;
  }
}

@layer components {
}
@layer utilities {
  .pb-safe {
    padding-bottom: env(safe-area-inset-bottom);
  }
}

